// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#zashiki-react-redux/app/components/stages/confirm/component \`PENDING\` renders 1`] = `
<div
  className="confirm pending"
/>
`;

exports[`#zashiki-react-redux/app/components/stages/confirm/component \`REJECTED\` renders 1`] = `
<div
  className="confirm rejected"
>
  <h2>
    MOCK NAME
  </h2>
  <p>
    MOCK MESSAGE
  </p>
</div>
`;

exports[`#zashiki-react-redux/app/components/stages/confirm/component \`RESOLVED\` renders 1`] = `
<div
  className="confirm resolved"
>
  <h2>
    Confirmation
  </h2>
</div>
`;

exports[`#zashiki-react-redux/app/components/stages/confirm/component Always renders 1`] = `
<div
  className="confirm resolved"
>
  <h2>
    Confirmation
  </h2>
</div>
`;
